# Tools-of-AI

./: README.md
LudoGame/: CMakeLists.txt  README.md  main.cpp
LudoGame/AI_player/: MyAiPlayer.cpp  MyAiPlayer.h  MyQTable.cpp  MyQTable.h  ai_player.h
LudoGame/Players/: move_logic.cpp  move_logic.h  player_aggro_fast.cpp  player_aggro_fast.h  player_fast.cpp  player_fast.h  player_random.cpp  player_random.h  player_random_safe.cpp  player_random_safe.h
